delete circle, add ellipse, add stroke width control, fix resizing for rectangle, add fill for curve, and correct done save to json and svg