@@ -40,3 +40,18 @@ tasks.withType(JavaCompile).configureEach {
 test {
     useJUnitPlatform()
 }
+
+tasks.register('jpackage', Exec) {
+    def jdkHome = System.getenv("JAVA_HOME")
+    def jpackagePath = "${jdkHome}/bin/jpackage"
+
+    commandLine jpackagePath,
+            '--name', 'Vectorium',
+            '--input', "$buildDir/libs",
+            '--main-jar', tasks.jar.archiveFile.get().asFile.name,
+            '--main-class', 'org.example.Main',
+            '--type', 'app-image',
+            '--module-path', 'C:\\Users\\Darowiin\\.jdks\\javafx-sdk-22.0.2\\lib',
+            '--add-modules', 'javafx.controls,javafx.fxml,javafx.swing',
+            '--java-options', '-Dfile.encoding=UTF-8'
+}
